--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,7 @@
-PG_USER      =
-PG_DB        =
-PG_PASS      =
+APP_PORT          = 3000
 
-DATABASE_URL = postgresql://${PG_USER}:${PG_PASS}@localhost:5432/${PG_DB}?schema=public
+POSTGRES_USER     = ""
+POSTGRES_DATABASE = ""
+POSTGRES_PASSWORD = ""
+
+DATABASE_URL = postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/${PG_POSTGRES_DATABASEDB}?schema=public
