chore: change outDir name

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "baseUrl": "src",
     "resolveJsonModule": true,
     "allowJs": true,
-    "outDir": "./build",
+    "outDir": "dist",
     "removeComments": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
