--- a/package.json
+++ b/package.json
@@ -20,23 +20,6 @@
     "prisma:dev": "prisma migrate dev -n",
     "prisma:gen": "prisma generate"
   },
-  "jest": {
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testEnvironment": "node",
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    }
-  },
   "dependencies": {
     "@nestjs/common": "9.2.1",
     "@nestjs/core": "9.2.1",
@@ -62,5 +45,27 @@
     "ts-node": "10.9.1",
     "tsconfig-paths": "4.1.2",
     "typescript": "4.9.4"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
+    "coverageDirectory": "../coverage",
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "rootDir": "src",
+    "testEnvironment": "node",
+    "testRegex": ".*\\.spec\\.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "moduleNameMapper": {
+      "^@/app(.*)$": "<rootDir>/app$1",
+      "^@/domain(.*)$": "<rootDir>/domain$1",
+      "^@/infra(.*)$": "<rootDir>/infra$1"
+    }
   }
 }
