--- a/package.json
+++ b/package.json
@@ -11,23 +11,28 @@
   },
   "scripts": {
     "build": "nest build",
-    "start": "nest start",
-    "dev": "nest start --watch",
-    "start:prod": "node dist/src/main",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
     "prisma:dev": "prisma migrate dev -n",
-    "prisma:gen": "prisma generate"
+    "prisma:gen": "prisma generate",
+    "start:dev": "cross-env STAGE=dev nest start --watch",
+    "start:prod": "cross-env STAGE=prod node dist/main",
+    "test": "cross-env STAGE=dev jest",
+    "test:watch": "cross-env STAGE=dev jest --watch",
+    "test:cov": "cross-env STAGE=dev jest --coverage"
   },
   "dependencies": {
     "@nestjs/common": "9.2.1",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "9.2.1",
+    "@nestjs/jwt": "^10.0.1",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "9.2.1",
     "@prisma/client": "4.9.0",
+    "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "0.1.13",
     "rimraf": "4.1.1",
     "rxjs": "7.8.0"
@@ -36,10 +41,14 @@
     "@nestjs/cli": "9.1.8",
     "@nestjs/schematics": "9.0.4",
     "@nestjs/testing": "9.2.1",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "4.17.15",
     "@types/jest": "29.2.6",
     "@types/node": "18.11.18",
+    "@types/passport-jwt": "^3.0.8",
+    "@types/passport-local": "^1.0.35",
     "@types/supertest": "2.0.12",
+    "cross-env": "^7.0.3",
     "jest": "29.3.1",
     "prisma": "4.9.0",
     "supertest": "6.3.3",
