--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,15 +23,12 @@ services:
     command: yarn start:dev
     restart: always
     env_file:
-      - .dev.env
+      - .env
     volumes:
       - .:/usr/app
-      - /usr/app/node_modules
     ports:
       - ${APP_PORT}:${APP_PORT}
       - 9229:9229
-    links:
-      - database
     depends_on:
       - database
     environment:
