--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "connect-pg-simple": "^8.0.0",
+    "cookie-parser": "^1.4.6",
+    "express-session": "^1.17.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -42,7 +45,10 @@
     "@nestjs/schematics": "9.0.4",
     "@nestjs/testing": "9.2.1",
     "@types/bcrypt": "^5.0.0",
+    "@types/connect-pg-simple": "^7.0.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "4.17.15",
+    "@types/express-session": "^1.17.5",
     "@types/jest": "29.2.6",
     "@types/node": "18.11.18",
     "@types/passport-jwt": "^3.0.8",
