--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "rxjs": "7.8.0"
   },
   "devDependencies": {
+    "@mermaid-js/mermaid-cli": "^9.3.0",
     "@nestjs/cli": "9.1.8",
     "@nestjs/schematics": "9.0.4",
     "@nestjs/testing": "9.2.1",
@@ -57,6 +58,7 @@
     "cross-env": "^7.0.3",
     "jest": "29.3.1",
     "prisma": "4.9.0",
+    "prisma-erd-generator": "^1.2.5",
     "supertest": "6.3.3",
     "ts-jest": "29.0.5",
     "ts-loader": "9.4.2",
